ORC-1304: [C++] fix the bug that throw ParseError when using SearchArgument with nested struct